--- a/portfolio.html
+++ b/portfolio.html
@@ -19,37 +19,38 @@
 
 <body class="portfolio">
     <header class="header">
-        <div class="container header-container">
-            <nav class="header-nav">
-                <a href="./index.html" class="header-logo link"><span class="header-accent">Web</span>Studio</a>
+        <div class="container header__container">
+            <nav class="navigation">
+                <a href="./index.html" class="logo navigation__logo link"><span
+                        class="logo__accent">Web</span>Studio</a>
                 <div>
-                    <ul class="header-navig">
+                    <ul class="menu">
                         <li class="list">
-                            <a href="./index.html" class="header-link link">Студія</a>
+                            <a href="./index.html" class="menu__link link">Студія</a>
                         </li>
                         <li class="list">
-                            <a href="./portfolio.html" class="header-link link current">Портфоліо</a>
-                            <div class="portfolio-navig-box"></div>
+                            <a href="./portfolio.html" class="menu__link link current">Портфоліо</a>
+                            <div class="portfolio-menu__box"></div>
                         </li>
                         <li class="list">
-                            <a href="" class="header-link link">Контакти</a>
+                            <a href="" class="menu__link link">Контакти</a>
                         </li>
                     </ul>
                 </div>
             </nav>
             <div>
-                <ul class="list header-contacts">
+                <ul class="list contacts">
                     <li class="list">
-                        <a href="mailto:info@devstudio.com" class="mailto link">
-                            <span class="header-icon-contacts">
-                                <svg class="header-icon" width="16" height="12">
+                        <a class="contacts__mailto link" href="mailto:info@devstudio.com">
+                            <span class="">
+                                <svg class="contacts__icon header__icon" width="16" height="12">
                                     <use href="./images/symbol-defs.svg#icon-envelope"></use>
                                 </svg> </span>info@devstudio.com</a>
                     </li>
                     <li class="list">
-                        <a href="tel:+380961111111" class="tel link">
-                            <span class="header-icon-contacts">
-                                <svg class="header-icon" width="10" height="16">
+                        <a class="contacts__tel link" href="tel:+380961111111">
+                            <span class="">
+                                <svg class="contacts__icon header__icon" width="10" height="16">
                                     <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                                 </svg> </span>+38 096 111 11 11</a>
                     </li>
